Cloudfront: set alias to the root domain name

--- a/s3-cloudfront-website.yml
+++ b/s3-cloudfront-website.yml
@@ -77,6 +77,8 @@ Resources:
       DistributionConfig:
         Enabled: Yes
         DefaultRootObject: "index.html"
+        Aliases:
+          - !Ref RootDomainName
         Origins:
           - DomainName: !Select ["1", !Split  ["http://", !GetAtt [S3Bucket, WebsiteURL]]]
             Id: !Join ['-', ['cf', !Ref RootDomainName]]
