--- a/s3-cloudfront-website.yml
+++ b/s3-cloudfront-website.yml
@@ -14,6 +14,9 @@ Parameters:
       - Yes
       - No
     Default: Yes
+  SSLCertificateId:
+    Description: IAM Certificate Id (such as ASCAIG3A3KUKBFDWXWOI2)
+    Type: String
 Conditions:
   RedirectWWWToNonWWW: !Equals [ !Ref WWWRedirect, Yes ]
 Resources:
@@ -84,12 +87,15 @@ Resources:
             Id: !Join ['-', ['cf', !Ref RootDomainName]]
             CustomOriginConfig:
               OriginProtocolPolicy: http-only
+        ViewerCertificate:
+          IamCertificateId: !Ref SSLCertificateId
+          SslSupportMethod: sni-only
         DefaultCacheBehavior:
           Compress: Yes
           ForwardedValues:
             QueryString: No
           TargetOriginId: !Join ['-', ['cf', !Ref RootDomainName]]
-          ViewerProtocolPolicy: allow-all
+          ViewerProtocolPolicy: redirect-to-https
 Outputs:
   WebsiteURL:
     Value: !GetAtt [S3Bucket, WebsiteURL]
